# namedpath

./: .gitignore  README.md  fstree.py  namedpath.py  pathname.py  pyproject.toml  pytest.ini  setup.cfg  tests.py
examples/: example1.py
tests/: tests.py
