[metadata]
name = namedpath
version = 0.1.0
author = paulwinex
author_email = paulwinex@gmail.com
url = https://github.com/paulwinex/namedpath
description = A module for managing filesystem structure using templates.
long_description = file: README.md
long_description_content_type = text/markdown
license = { file="LICENSE" }
requires-python = ">=3.5"
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules =
    namedpath
